# practice_rust_01

./: Cargo.toml  hotdog.db
assets/: main.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
